--- a/sections/chapter_six_conclusion.tex
+++ b/sections/chapter_six_conclusion.tex
@@ -25,4 +25,4 @@ We showed that concolic execution can provide comparable security gains in deblo
 Specifically, we demonstrated a reduction of 47\% in LLOC and 55\% reduction in critical API calls for web applications debloated by \animatedead{}. 
 
 Through the analysis of modern web applications and development of debloating frameworks, we supported our thesis statement that modern web applications are exposed to an unnecessarily large attack-surface due to the code-bloat. 
-We proposed dynamic and hybrid debloating mechanisms that can successfully identify unused modules in web applications and automatically remove them via debloating, thereby, protecting web applications against the exploitation of vulnerabilities. 
+We proposed dynamic and hybrid debloating mechanisms that can successfully identify unused modules in web applications and automatically debloat them, thereby, protecting web applications against the exploitation of vulnerabilities. 
