--- a/sections/dbltr/appendix.tex
+++ b/sections/dbltr/appendix.tex
@@ -1,7 +1,7 @@
 % \section{Appendix}
 
 \begin{table}[]
-    \caption{List of CVEs and statistics of affected clusters and users after debloating.}
+    \caption{List of CVEs and statistics of affected clusters and users after debloating used in Chapter~\ref{chap:dbltr}.}
     \label{tab:cve_details}
     \centering
     \begin{adjustbox}{max width=0.65\textwidth}
@@ -70,7 +70,7 @@
     \end{table}
 
 \begin{table}[t]
-\caption{List of Critical PHP APIs}
+\caption{List of Critical PHP APIs used in Chapter~\ref{chap:dbltr}}
 \label{tab:cacs}
 \begin{adjustbox}{max width=\textwidth}
 \begin{tabular}{|l|p{20cm}|}
