--- a/sections/dbltr/background.tex
+++ b/sections/dbltr/background.tex
@@ -13,7 +13,7 @@ Then, we review several source code metrics that can be used to measure the effe
 
 \subsection{Debloating based on dynamic usage traces}
 Debloating based on dynamic traces for web applications was first introduced in ``Less is More''~\cite{lessismore}, in which we incorporate a set of automation tools and scripts to \emph{simulate} usage behavior while recording the executed server-side files as well as their respective lines.
-Figure~\ref{fig:file_vs_func_debloating} represents the two debloating approaches discussed by ``Less is More''~\cite{lessismore}. 
+Figure~\ref{fig:file_vs_func_debloating} represents the two debloating approaches discussed by ``Less is More'' (Chapter~\ref{chap:lim}). 
 Based on this code-coverage information (Step 1 in Figure~\ref{fig:file_vs_func_debloating}) ``Less is More'' identifies unused nodes in the Abstract Syntax Tree (AST). 
 
 In ``Less is More'' we discussed two debloating strategies, file-level and function-level debloating. 
