--- a/sections/lim/parts/appendices.tex
+++ b/sections/lim/parts/appendices.tex
@@ -3,7 +3,7 @@
 \begin{table}[ht!]
   \footnotesize
   \centering
-\caption{Comprehensive list of tutorials collected from the first two pages of Google search results}
+\caption{Comprehensive list of tutorials collected from the first two pages of Google search results used in Chapter~\ref{chap:lim}}
 \label{table:listoftutorials}
 \scalebox{0.7}{
 \begin{tabular}{|l|p{20cm}|}
@@ -63,7 +63,7 @@
 
 \begin{table}[]
 \centering
-\caption{Comprehensive list of mapped CVEs and whether vulnerable files, functions or lines were triggered based on our usage profiles. Grey rows indicate CVEs located in modules that are, by default, disabled.}
+\caption{Comprehensive list of mapped CVEs and whether vulnerable files, functions or lines were triggered based on our usage profiles used in Chapter~\ref{chap:lim}. Grey rows indicate CVEs located in modules that are, by default, disabled.}
 \label{table:listofallcves}
 \scalebox{0.5}{
 \begin{tabular}{|l|l|l|c|c|c|l|}
