--- a/sections/lim/parts/discussion.tex
+++ b/sections/lim/parts/discussion.tex
@@ -1,4 +1,4 @@
-\section{Limitations and future work}
+\section{Limitations}
 \label{sec:limitations}
 In this study, we set out to precisely quantify the security benefits of
 debloating, when applied to web applications. Through a series of experiments,
